removed minor security risks and tweaked code formatting

--- a/transcribe/package.json
+++ b/transcribe/package.json
@@ -14,5 +14,8 @@
     "transcribe"
   ],
   "author": "Jaime Gonzalez",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "aws-sdk": "^2.468.0"
+  }
 }
